--- a/BartenderSupportSystem/Server/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BartenderSupportSystem/Server/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,21 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Experience"></label>
+                <input type="number" min="0" max="120000" asp-for="Input.Experience" class="form-control" />
+                <span asp-validation-for="Input.Experience" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
