--- a/BartenderSupportSystem/Client/Shared/InputImg.razor
+++ b/BartenderSupportSystem/Client/Shared/InputImg.razor
@@ -13,7 +13,7 @@
     @if (_imageBase64 != null)
     {
         <div style="margin: 10px;">
-            <img src="data:image/jpeg;base64, @_imageBase64" style="width: 400px;"/>
+            <img src="data:image/jpeg;base64, @_imageBase64" style="width: 400px; height: 400px;"/>
         </div>
     }
 </div>
@@ -21,7 +21,7 @@
     @if (ImageUrl != null)
     {
         <div style="margin: 10px;">
-            <img src="@ImageUrl" style="width: 400px;" />
+            <img src="@ImageUrl" style="width: 400px; height: 400px;" />
         </div>
     }
 </div>
