--- a/BartenderSupportSystem/Client/Pages/Drinks/DrinksForm.razor
+++ b/BartenderSupportSystem/Client/Pages/Drinks/DrinksForm.razor
@@ -6,16 +6,16 @@
     <div class="form-group">
         <label for="@CocktailViewModel.Name">Name</label>
         <div>
-            <InputText class="form-control" @bind-Value="@CocktailViewModel.Name" />
+            <InputText class="form-control col-6" @bind-Value="@CocktailViewModel.Name" />
             <ValidationMessage For="@(() => CocktailViewModel.Name)" />
         </div>
     </div>
     <div class="form-group">
         <label for="@CocktailViewModel.Type">Type</label>
         <div>
-            <InputSelect class="form-control" @bind-Value="@CocktailViewModel.Type">
-                <option value="" selected>---Select a type---</option>
-                @foreach (var opt in Enum.GetValues(typeof(CocktailType)))
+            <InputSelect class="form-control col-6" @bind-Value="@CocktailViewModel.Type">
+                <option value="0">---Select a type---</option>
+                @foreach (var opt in Enum.GetValues(typeof(CocktailType)))//make brand list options
                 {
                     <option value="@opt">@opt</option>
                 }
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="form-group">
-        <InputImg Label="Photo" ImageUrl="@_imageUrl" OnSelectedImage="OnSelectedImage"/>
+        <InputImg Label="Photo" ImageUrl="@_imageUrl" OnSelectedImage="OnSelectedImage" />
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
