--- a/BartenderSupportSystem/Client/Shared/NavMenu.razor
+++ b/BartenderSupportSystem/Client/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-folder" aria-hidden="true"></span> Cocktails
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="brands">
+                <span class="oi oi-folder" aria-hidden="true"></span> Brands
+            </NavLink>
+        </li>
     </ul>
 </div>
 
