--- a/BartenderSupportSystem/Client/Pages/Brands/BrandsIndex.razor
+++ b/BartenderSupportSystem/Client/Pages/Brands/BrandsIndex.razor
@@ -3,9 +3,13 @@
 @using BartenderSupportSystem.Shared.Models.RecommendationSystem
 @using AutoMapper
 @using BartenderSupportSystem.Client.ViewModels.RecommendationSystem
+@using BartenderSupportSystem.Shared.Utils
 @inject NavigationManager NavigationManager
 <h3>Brands Index</h3>
 
+<Pagination CurrentPage="@PaginationDto.Page" TotalAmountOfPages="_totalAmountOfPages" OnSelectedPage="OnSelectedPage">
+
+</Pagination>
 @if (_brands != null)
 {
     <table class="table table-striped">
@@ -35,8 +39,10 @@ else
 @code {
     [Inject] public IRepository<Brand> BrandRepository { get; set; }
     [Inject] public IMapper Mapper { get; set; }
+    public PaginationDto PaginationDto { get; set; } = new PaginationDto {AmountOfRecordsPerPage = 2};
     public BrandViewModel BrandViewModel { get; set; } = new BrandViewModel { Id = Guid.NewGuid() };
     private List<BrandViewModel> _brands;
+    private int _totalAmountOfPages;
 
     private async Task AddBrand()
     {
@@ -47,10 +53,19 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var brandModels = await BrandRepository.GetAll();
-        var brandsList = Mapper.Map<List<Brand>, List<BrandViewModel>>(brandModels.ToList());
-        var b = 3;
-        _brands = new List<BrandViewModel>();
-        _brands.AddRange(brandsList);
+        await LoadBrands();
+    }
+
+    protected async Task OnSelectedPage(int page)
+    {
+        PaginationDto.Page = page;
+        await LoadBrands();
+    }
+
+    private async Task LoadBrands()
+    {
+        var paginatedBrandModelsResponse = await BrandRepository.GetPaginated(PaginationDto);
+        _totalAmountOfPages = paginatedBrandModelsResponse.TotalAmountOfPages;
+        _brands = Mapper.Map<List<Brand>, List<BrandViewModel>>(paginatedBrandModelsResponse.Content.ToList());
     }
 }
