--- a/BartenderSupportSystem/Client/Pages/Brands/CreateBrand.razor
+++ b/BartenderSupportSystem/Client/Pages/Brands/CreateBrand.razor
@@ -4,16 +4,17 @@
 @using AutoMapper
 @using BartenderSupportSystem.Client.ViewModels.RecommendationSystem
 @inject NavigationManager NavigationManager
+
 <h3>Create Brand</h3>
 
-<BrandsForm BrandViewModel="BrandViewModel" OnValidSubmit="AddBrand"/>
+<BrandsForm BrandViewModel="BrandViewModel" OnValidSubmit="Create"/>
 
 @code {
     [Inject] public IRepository<Brand> BrandRepository { get; set; }
     [Inject] public IMapper Mapper { get; set; }
     public BrandViewModel BrandViewModel { get; set; } = new BrandViewModel { Id = Guid.NewGuid() };
 
-    private async Task AddBrand()
+    private async Task Create()
     {
         var brand = Mapper.Map<BrandViewModel, Brand>(BrandViewModel);
         await BrandRepository.AddOne(brand);
