--- a/BartenderSupportSystem/Client/Pages/Drinks/EditDrink.razor
+++ b/BartenderSupportSystem/Client/Pages/Drinks/EditDrink.razor
@@ -6,23 +6,27 @@
 @inject NavigationManager NavigationManager
 
 <h3>Edit Drink</h3>
-<DrinksForm DrinkViewModel="@_drinkViewModel" OnValidSubmit="Edit" />
+
+@if (_drinkViewModel != null)
+{
+    <DrinksForm DrinkViewModel="@_drinkViewModel" OnValidSubmit="Edit" />
+}
 
 @code {
     [Parameter] public Guid Id { get; set; }
-    [Inject] public IRepository<Drink> DrinkRepository { get; set; }
+    [Inject] public IRepository<DrinkDto> DrinkRepository { get; set; }
     [Inject] public IMapper Mapper { get; set; }
-    private DrinkViewModel _drinkViewModel = new DrinkViewModel();
+    private DrinkViewModel _drinkViewModel;
 
     protected override async Task OnInitializedAsync()
     {
         var drink = await DrinkRepository.GetOne(Id);
-        _drinkViewModel = Mapper.Map<Drink, DrinkViewModel>(drink);
+        _drinkViewModel = Mapper.Map<DrinkDto, DrinkViewModel>(drink);
     }
 
     private async Task Edit()
     {
-        var drink = Mapper.Map<DrinkViewModel, Drink>(_drinkViewModel);
+        var drink = Mapper.Map<DrinkViewModel, DrinkDto>(_drinkViewModel);
         await DrinkRepository.UpdateOne(drink.Id, drink);
         NavigationManager.NavigateTo("/drinks");
     }
