--- a/BartenderSupportSystem/Client/Shared/NavMenu.razor
+++ b/BartenderSupportSystem/Client/Shared/NavMenu.razor
@@ -39,13 +39,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" Match="NavLinkMatch.All" href="cocktails">
-                <span class="oi oi-folder" aria-hidden="true"></span> Cocktails
+            <NavLink class="nav-link" Match="NavLinkMatch.All" href="brands">
+                <span class="oi oi-folder" aria-hidden="true"></span> Brands
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" Match="NavLinkMatch.All" href="brands">
-                <span class="oi oi-folder" aria-hidden="true"></span> Brands
+            <NavLink class="nav-link" Match="NavLinkMatch.All" href="drinks">
+                <span class="oi oi-folder" aria-hidden="true"></span> Drinks
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" Match="NavLinkMatch.All" href="cocktails">
+                <span class="oi oi-folder" aria-hidden="true"></span> Cocktails
             </NavLink>
         </li>
     </ul>
