--- a/BartenderSupportSystem/Client/Shared/InputImg.razor
+++ b/BartenderSupportSystem/Client/Shared/InputImg.razor
@@ -12,13 +12,13 @@
 <div>
     @if (_imageBase64 != null)
     {
-        <div style="margin: 10px;">
+        <div style="border: 2px solid #e3e3f1; width: 400px; height: 400px;">
             <img src="data:image/jpeg;base64, @_imageBase64" style="width: 400px; height: 400px;"/>
         </div>
     }
     @if (ImageUrl != null)
     {
-        <div style="margin: 10px;">
+        <div style="border: 2px solid #e3e3f1; width: 400px; height: 400px;">
             <img src="@ImageUrl" style="width: 400px; height: 400px;"/>
         </div>
     }
