--- a/BartenderSupportSystem/Client/Pages/Brands/BrandsIndex.razor
+++ b/BartenderSupportSystem/Client/Pages/Brands/BrandsIndex.razor
@@ -2,13 +2,13 @@
 @using BartenderSupportSystem.Client.Repositories
 @using BartenderSupportSystem.Shared.Models.RecommendationSystem
 @using AutoMapper
+@using BartenderSupportSystem.Client.Repositories.Interfaces
 @using BartenderSupportSystem.Client.ViewModels.RecommendationSystem
 @using BartenderSupportSystem.Shared.Utils
 @inject NavigationManager NavigationManager
 
 <h3>Brands Index</h3>
 
-<Pagination CurrentPage="@PaginationDto.Page" TotalAmountOfPages="_totalAmountOfPages" OnSelectedPage="OnSelectedPage"/>
 <GenericList List="@_brands">
     <WholeListTemplate>
         <table class="table table-striped">
@@ -35,33 +35,18 @@
    
 
 @code {
-    [Inject] public IRepository<BrandDto> BrandRepository { get; set; }
+    [Inject] public IBrandRepository BrandRepository { get; set; }
     [Inject] public IMapper Mapper { get; set; }
-    public PaginationDto PaginationDto { get; set; } = new PaginationDto {AmountOfRecordsPerPage = 6};
     private List<BrandViewModel> _brands;
-    private int _totalAmountOfPages;
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadBrands();
-    }
-
-    protected async Task OnSelectedPage(int page)
-    {
-        PaginationDto.Page = page;
-        await LoadBrands();
-    }
-
-    private async Task LoadBrands()
-    {
-        var paginatedBrandModelsResponse = await BrandRepository.GetPaginated(PaginationDto);
-        _totalAmountOfPages = paginatedBrandModelsResponse.TotalAmountOfPages;
-        _brands = Mapper.Map<List<BrandDto>, List<BrandViewModel>>(paginatedBrandModelsResponse.Content.ToList());
+        var brands = await BrandRepository.GetBrands();
+        _brands = Mapper.Map<List<BrandDto>, List<BrandViewModel>>(brands);
     }
 
     private async Task Delete(Guid id)
     {
-        await BrandRepository.DeleteOne(id);
-        await LoadBrands();
+        await BrandRepository.DeleteBrand(id);
     }
 }
