--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -10,10 +10,10 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+          Brands
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/data">Action</a>
+          <a class="dropdown-item" routerLink="/brands/create">Create Brand</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
