--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-form/brand-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-form/brand-form.component.html
@@ -1,1 +1,39 @@
-<p>brand-form works!</p>
+<div class="mt-3">
+  <h4 class="text">Brand Form</h4>
+  <form [formGroup]="brandForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input (blur)="validateFormValue()" autocomplete="off" [class.is-invalid]="formErrors.name"
+        [class.is-valid]="brandForm.controls.name.valid" type="text" class="form-control col-sm-6" id="name"
+        formControlName="name" placeholder="Enter brand name">
+      <div class="invalid-feedback" *ngIf="formErrors.name">
+        {{formErrors.name}}
+      </div>
+      <div class="valid-feedback" *ngIf="!formErrors.name">
+        Looks good!
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="countryOfOrigin">Country Of Origin</label>
+      <input (blur)="validateFormValue()" list="countries" autocomplete="off" [class.is-invalid]="formErrors.countryOfOrigin"
+        [class.is-valid]="brandForm.controls.countryOfOrigin.valid" type="text" class="form-control col-sm-6"
+        id="countryOfOrigin" formControlName="countryOfOrigin" placeholder="Enter country of origin">
+        <datalist id="countries">
+          <option *ngFor="let country of countryArray" [value]="country"></option>
+        </datalist>
+      <div class="invalid-feedback" *ngIf="formErrors.countryOfOrigin">
+        {{formErrors.countryOfOrigin}}
+      </div>
+      <div class="valid-feedback" *ngIf="!formErrors.countryOfOrigin">
+        Looks good!
+      </div>
+    </div>
+
+    <button type="submit" [disabled]="brandForm.invalid" class="btn btn-primary">Submit</button>
+  </form>
+
+  <div>
+    <p>{{brandForm.value | json}}</p>
+    <p>Form is NOT valid: {{brandForm.invalid}}</p>
+  </div>
+</div>
