--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -17,6 +17,15 @@
           <a class="dropdown-item" routerLink="/brands/create">Create Brand</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Drinks
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/drinks">Drinks List</a>
+          <a class="dropdown-item" routerLink="/drinks/create">Create Drink</a>
+        </div>
+      </li>
     </ul>
     <app-login-menu></app-login-menu>
   </div>
