Add read, create and edit operations for Drink class.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
@@ -1,4 +1,5 @@
-<div class="custom-file mt-3 col-sm-6">
+<h6 class="text">Photo Path</h6>
+<div class="custom-file mt-1 col-sm-6">
     <input #imageInput type="file" accept="image/*" class="custom-file-input" id="customFile"
         (change)="processFile(imageInput)">
     <label class="custom-file-label" for="customFile">Choose file...</label>
