--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-form/brand-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-form/brand-form.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <button type="submit" [disabled]="brandForm.invalid" class="btn btn-primary">Submit</button>
+    <button type="submit" [disabled]="brandForm.invalid" class="btn btn-primary col-sm-6">Submit</button>
   </form>
 
   <div>
