--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
@@ -1,1 +1,19 @@
-<p>drink-list works!</p>
+<div *ngIf="drinks" class="row justify-content-start m-3">
+    <div *ngFor="let drink of drinks" class="col-lg-4 col-md-6 col-sm-12 mt-3">
+        <div *ngIf="drink.photoPath != null" class="custom-card-img">
+            <img *ngIf="drink.photoPath != null" class="card-img-top image-limiter" [src]="drink.photoPath"
+                alt="No image">
+        </div>
+        <div class="card text-center">
+            <h5 class="card-header"><a [routerLink]="['/drinks', drink.id]">{{drink.name}}</a></h5>
+            <div class="card-body">
+                <div class="row justify-content-center">
+                    <a class="btn btn-success m-2" (click)="editDrink(drink.id)">Edit</a>
+                    <button class="btn btn-danger m-2" (click)="deleteDrink(drink)">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<p *ngIf="drinks && drinks.length === 0" class="m-3 text-center">{{statusMessage}}</p>
+<p *ngIf="!drinks" class="m-3 text-center">{{statusMessage}}</p>
