--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
@@ -1,10 +1,15 @@
+<h4 class="text mt-3">Drink List</h4>
+<div class="col">
+    <a class="btn btn-primary btn-lg m-2" routerLink="/drinks/create">Create Drink</a>
+    <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
+</div>
 <div *ngIf="drinks" class="row justify-content-start m-3">
     <div *ngFor="let drink of drinks" class="col-lg-4 col-md-6 col-sm-12 mt-3">
-        <div *ngIf="drink.photoPath != null" class="custom-card-img">
-            <img *ngIf="drink.photoPath != null" class="card-img-top image-limiter" [src]="drink.photoPath"
-                alt="No image">
-        </div>
         <div class="card text-center">
+            <div *ngIf="drink.photoPath != null">
+                <img *ngIf="drink.photoPath != null" class="card-img-top image-limiter" [src]="drink.photoPath"
+                    alt="No image">
+            </div>
             <h5 class="card-header"><a [routerLink]="['/drinks', drink.id]">{{drink.name}}</a></h5>
             <div class="card-body">
                 <div class="row justify-content-center">
