--- a/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<div class="col mt-3">
+    <div class="jumbotron">
+        <h1 class="display-4">Reccomendation System</h1>
+        <p class="lead">A system designed to help inexperienced bartenders.</p>
+        <hr class="my-4">
+        <p>Available Lists:</p>
+        <div class="col">
+            <a class="btn btn-primary col-sm-2 m-2" routerLink="/brands" role="button">Brands</a>
+            <a class="btn btn-primary col-sm-2 m-2" routerLink="/drinks" role="button">Drinks</a>
+            <a class="btn btn-primary col-sm-2 m-2" routerLink="/cocktails" role="button">Cocktails</a>
+        </div>
+    </div>
+    <div class="jumbotron">
+        <h1 class="display-4">Test System</h1>
+        <p class="lead">A system designed to help inexperienced bartenders.</p>
+        <hr class="my-4">
+        <p>Available Lists:</p>
+        <div class="col">
+            <a class="btn btn-primary col-sm-2 m-2" routerLink="/tests" role="button">Tests</a>
+        </div>
+    </div>
+</div>
