--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-list/brand-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-list/brand-list.component.html
@@ -1,11 +1,15 @@
 <div class="mt-3">
     <h4 class="text">Brand List</h4>
-    <table class="table table-striped">
+    <div class="col">
+        <a class="btn btn-primary btn-lg m-2" routerLink="/brands/create">Create Brand</a>
+        <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
+    </div>
+    <table class="table table-striped mt-3">
         <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Country Of Origin</th>
-        </tr>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Country Of Origin</th>
+            </tr>
         </thead>
         <tbody>
             <ng-container *ngIf="brands">
@@ -25,4 +29,3 @@
         </tbody>
     </table>
 </div>
-
