--- a/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="col mt-3">
-    <div class="jumbotron">
-        <h1 class="display-4">Reccomendation System</h1>
-        <p class="lead">A system designed to help inexperienced bartenders.</p>
+    <div class="jumbotron-fluid">
+        <h1 class="display-4">Help System</h1>
+        <p class="lead">A system designed to help inexperienced bartenders by providing great filter instuments.</p>
         <hr class="my-4">
         <p>Available Lists:</p>
         <div class="col">
@@ -10,7 +10,7 @@
             <a class="btn btn-primary col-sm-2 m-2" routerLink="/cocktails" role="button">Cocktails</a>
         </div>
     </div>
-    <div class="jumbotron">
+    <div class="jumbotron-fluid">
         <h1 class="display-4">Test System</h1>
         <p class="lead">A system designed to help inexperienced bartenders.</p>
         <hr class="my-4">
